<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_review_image"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tv_review_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_review_image"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/sample_text"
                android:textSize="26sp" />

            <View
                android:id="@+id/v_underline"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tv_review_name"
                android:layout_margin="10dp"
                android:background="@color/cardview_shadow_start_color" />

            <RelativeLayout
                android:id="@+id/rl_rate_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/v_underline">

                <TextView
                    android:id="@+id/tv_review_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@color/rating_bg_color"
                    android:padding="3dp"
                    android:text="@string/sample_rating"
                    android:textColor="@android:color/white"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/tv_review_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="3dp"
                    android:text="@string/sample_date" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_review_headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_rate_name"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/sample_headline" />

            <TextView
                android:id="@+id/tv_review_summary_short"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_review_headline"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/sample_summary_short" />

            <Button
                android:id="@+id/btn_review_read_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:text="@string/read_more"
                android:textColor="@color/rating_bg_color"
                android:textSize="18sp" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>